# smoke-localization

./: .gitignore  README.md  main.ipynb
cameratransform/: .gitignore  cameratransform_test.ipynb  data_types.py  df_annotations.pkl  georefcam.py  logger.py  multiray_cast.ipynb  pyproject.toml  ray_collision.py  requirements.txt  utils.py
cameratransform/georefcam/: camera_model.py  data_types.py  dem.py  georefcam.py
depth_matching/: requirements.txt
horizon_line/: detect_horizon_line.ipynb  horizon_filter.ipynb  old_detect_horizon_line.ipynb
lidar/: ScreenCamera_example.json  ScreenCamera_viewpoint.json  elevation_to_pointcloud.ipynb  point_coords.py  requirements.txt  visualize_terrain.ipynb
lidar/data/MNS/: liste_dalle.txt  liste_dalle_15x15.txt  liste_dalle_extended.txt
lidar/data/horizon/: brison.npy  brison_1.npy  brison_3.npy  brison_4.npy  cabanelle.npy  cabanelle_1.npy  cabanelle_3.npy  cabanelle_4.npy  courmettes.npy  courmettes_1.npy  courmettes_2.npy  courmettes_3.npy  courmettes_4.npy  ferion.npy  ferion_1.npy  ferion_2.npy  ferion_3.npy  ferion_4.npy  horizon_contour.npy  horizon_contour_b4.npy  marguerite.npy  marguerite_1.npy  marguerite_2.npy  marguerite_3.npy  marguerite_4.npy  salaunes_1.npy  salaunes_1_1.npy  salaunes_1_2.npy  salaunes_1_3.npy  salaunes_1_4.npy  salaunes_2.npy  salaunes_2_1.npy  salaunes_2_2.npy  salaunes_2_3.npy  salaunes_2_4.npy  st_peray.npy  st_peray_1.npy  (+6 more)
lidar/tools/: camera.py  image.py  load.py  project.py  signal.py
pointcloud/: ScreenCamera_viewpoint.json  requirements.txt  visualize_terrain.ipynb
(+3 files in other folders)
