[build-systems]
requires = ["setuptools"]
build-backend = ["setuptools.build_meta"]

[project]
name = "georefcam"
authors = [{name = "Florent Scarpa", email = "florent.scarpa@hotmail.fr"}]
license = {text = "Apache-2.0"}
version = "0.0.0"
requires-python = ">=3.8"
dependencies = [
    "better-abc",
    "cameratransform",
    "nptyping",
    "numpy",
    "pandas",
    "pandera",
    "pyembree",
    "pyproj",
    "pyvista",
    "rtree",
    "trimesh",
]

[tool.setuptools.packages]
find = {}
